// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Companies Api all() parse the returned data correctly 1`] = `
{
  "data": [
    {
      "additional_street": "Bâtiment D",
      "address": "10 avenue de la gare
Bâtiment D
74000 Annecy",
      "administrative_area": null,
      "country": /* Country Instance => */ "FR",
      "id": 1,
      "invoice_identifier": "0225:123456789_LOCATION",
      "is_public_entity": false,
      "legal_name": "Testing, Inc",
      "locality": "Annecy",
      "note": "Anciennement Machin, Inc.",
      "phone": /* Phone Instance => */ "+33123456789",
      "postal_code": "74000",
      "registration_id": "12345678900001",
      "service_code": null,
      "street": "10 avenue de la gare",
      "vat_number": "FR32123456789",
    },
    {
      "additional_street": null,
      "address": "Rue de Cornavin, 1
1000 Lausanne",
      "administrative_area": null,
      "country": /* Country Instance => */ "CH",
      "id": 2,
      "invoice_identifier": null,
      "is_public_entity": false,
      "legal_name": "Obscure",
      "locality": "1000",
      "note": null,
      "phone": /* Phone Instance => */ "+41211234567",
      "postal_code": null,
      "registration_id": "CHE-123.456.789",
      "service_code": null,
      "street": "Rue de Cornavin, 1",
      "vat_number": "CHE-123.456.789 TVA",
    },
  ],
  "pagination": {
    "currentPage": 1,
    "perPage": 2,
    "total": {
      "items": 2,
      "pages": 1,
    },
  },
}
`;

exports[`Companies Api create() parse the returned data correctly (with #1) 1`] = `
{
  "additional_street": "Bâtiment D",
  "address": "10 avenue de la gare
Bâtiment D
74000 Annecy",
  "administrative_area": null,
  "country": /* Country Instance => */ "FR",
  "id": 1,
  "invoice_identifier": "0225:123456789_LOCATION",
  "is_public_entity": false,
  "legal_name": "Testing, Inc",
  "locality": "Annecy",
  "note": "Anciennement Machin, Inc.",
  "phone": /* Phone Instance => */ "+33123456789",
  "postal_code": "74000",
  "registration_id": "12345678900001",
  "service_code": null,
  "street": "10 avenue de la gare",
  "vat_number": "FR32123456789",
}
`;

exports[`Companies Api create() parse the returned data correctly (with #2) 1`] = `
{
  "additional_street": null,
  "address": "Rue de Cornavin, 1
1000 Lausanne",
  "administrative_area": null,
  "country": /* Country Instance => */ "CH",
  "id": 2,
  "invoice_identifier": null,
  "is_public_entity": false,
  "legal_name": "Obscure",
  "locality": "1000",
  "note": null,
  "phone": /* Phone Instance => */ "+41211234567",
  "postal_code": null,
  "registration_id": "CHE-123.456.789",
  "service_code": null,
  "street": "Rue de Cornavin, 1",
  "vat_number": "CHE-123.456.789 TVA",
}
`;

exports[`Companies Api one() parse the returned data correctly (with #1) 1`] = `
{
  "additional_street": "Bâtiment D",
  "address": "10 avenue de la gare
Bâtiment D
74000 Annecy",
  "administrative_area": null,
  "country": /* Country Instance => */ "FR",
  "id": 1,
  "invoice_identifier": "0225:123456789_LOCATION",
  "is_public_entity": false,
  "legal_name": "Testing, Inc",
  "locality": "Annecy",
  "note": "Anciennement Machin, Inc.",
  "phone": /* Phone Instance => */ "+33123456789",
  "postal_code": "74000",
  "registration_id": "12345678900001",
  "service_code": null,
  "street": "10 avenue de la gare",
  "vat_number": "FR32123456789",
}
`;

exports[`Companies Api one() parse the returned data correctly (with #2) 1`] = `
{
  "additional_street": null,
  "address": "Rue de Cornavin, 1
1000 Lausanne",
  "administrative_area": null,
  "country": /* Country Instance => */ "CH",
  "id": 2,
  "invoice_identifier": null,
  "is_public_entity": false,
  "legal_name": "Obscure",
  "locality": "1000",
  "note": null,
  "phone": /* Phone Instance => */ "+41211234567",
  "postal_code": null,
  "registration_id": "CHE-123.456.789",
  "service_code": null,
  "street": "Rue de Cornavin, 1",
  "vat_number": "CHE-123.456.789 TVA",
}
`;

exports[`Companies Api update() parse the returned data correctly (with #1) 1`] = `
{
  "additional_street": "Bâtiment D",
  "address": "10 avenue de la gare
Bâtiment D
74000 Annecy",
  "administrative_area": null,
  "country": /* Country Instance => */ "FR",
  "id": 1,
  "invoice_identifier": "0225:123456789_LOCATION",
  "is_public_entity": false,
  "legal_name": "Testing, Inc",
  "locality": "Annecy",
  "note": "Anciennement Machin, Inc.",
  "phone": /* Phone Instance => */ "+33123456789",
  "postal_code": "74000",
  "registration_id": "12345678900001",
  "service_code": null,
  "street": "10 avenue de la gare",
  "vat_number": "FR32123456789",
}
`;

exports[`Companies Api update() parse the returned data correctly (with #2) 1`] = `
{
  "additional_street": null,
  "address": "Rue de Cornavin, 1
1000 Lausanne",
  "administrative_area": null,
  "country": /* Country Instance => */ "CH",
  "id": 2,
  "invoice_identifier": null,
  "is_public_entity": false,
  "legal_name": "Obscure",
  "locality": "1000",
  "note": null,
  "phone": /* Phone Instance => */ "+41211234567",
  "postal_code": null,
  "registration_id": "CHE-123.456.789",
  "service_code": null,
  "street": "Rue de Cornavin, 1",
  "vat_number": "CHE-123.456.789 TVA",
}
`;
